--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
       <%= link_to 'Cities', cities_path %>
       <%= link_to 'States', states_path %>
       <%= link_to 'Event Types', event_types_path %>
-      <%= link_to 'Event dates', event_dates_path %>
+      <%= link_to 'Addresses', addresses_path %>
+      <%= link_to 'Persons', people_path %>
+      <%= link_to 'Events', events_path %>
     </nav>
     <%= yield %>
   </body>
