--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Event date:</strong>
-  <%= @event.event_date %>
+  <strong>Event date time:</strong>
+  <%= @event.datetime %>
 </p>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
